// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caret renders cardinal directions 1`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "bottom": "100%",
      "left": "50%",
      "marginLeft": -8,
      "pointerEvents": "none",
      "position": "absolute",
    }
  }
  width={16}
>
  <g
    transform="translate(8,16) rotate(180)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 2`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "left": "100%",
      "marginTop": -8,
      "pointerEvents": "none",
      "position": "absolute",
      "top": "50%",
    }
  }
  width={16}
>
  <g
    transform="translate(0,8) rotate(-90)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 3`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "left": "50%",
      "marginLeft": -8,
      "pointerEvents": "none",
      "position": "absolute",
      "top": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(8,0)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 4`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "marginTop": -8,
      "pointerEvents": "none",
      "position": "absolute",
      "right": "100%",
      "top": "50%",
    }
  }
  width={16}
>
  <g
    transform="translate(16,8) rotate(90)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 5`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "bottom": "100%",
      "left": 8,
      "marginLeft": null,
      "pointerEvents": "none",
      "position": "absolute",
    }
  }
  width={16}
>
  <g
    transform="translate(8,16) rotate(180)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 6`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "bottom": "100%",
      "marginLeft": null,
      "pointerEvents": "none",
      "position": "absolute",
      "right": 8,
    }
  }
  width={16}
>
  <g
    transform="translate(8,16) rotate(180)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 7`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "left": 8,
      "marginLeft": null,
      "pointerEvents": "none",
      "position": "absolute",
      "top": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(8,0)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 8`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "marginLeft": null,
      "pointerEvents": "none",
      "position": "absolute",
      "right": 8,
      "top": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(8,0)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 9`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "marginTop": null,
      "pointerEvents": "none",
      "position": "absolute",
      "right": "100%",
      "top": 8,
    }
  }
  width={16}
>
  <g
    transform="translate(16,8) rotate(90)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 10`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "bottom": 8,
      "marginTop": null,
      "pointerEvents": "none",
      "position": "absolute",
      "right": "100%",
    }
  }
  width={16}
>
  <g
    transform="translate(16,8) rotate(90)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 11`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "left": "100%",
      "marginTop": null,
      "pointerEvents": "none",
      "position": "absolute",
      "top": 8,
    }
  }
  width={16}
>
  <g
    transform="translate(0,8) rotate(-90)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;

exports[`Caret renders cardinal directions 12`] = `
<svg
  height={16}
  role="presentation"
  style={
    {
      "bottom": 8,
      "left": "100%",
      "marginTop": null,
      "pointerEvents": "none",
      "position": "absolute",
    }
  }
  width={16}
>
  <g
    transform="translate(0,8) rotate(-90)"
  >
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0L-8,0Z"
      fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
    />
    <path
      d="M-8,0L0,8L8,0"
      fill="none"
      stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
      strokeWidth="1px"
    />
  </g>
</svg>
`;
